; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_create_builtin_constructor.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_create_builtin_constructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_builtin_constructor(i32* %0, i32 %1, i32* %2, i32* %3, i32 %4, i32* %5, i32** %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32**, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32** %6, i32*** %15, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load i32*, i32** %11, align 8
  %21 = load i32*, i32** %12, align 8
  %22 = load i32, i32* %13, align 4
  %23 = load i32*, i32** %14, align 8
  %24 = call i32 @create_builtin_function(i32* %18, i32 %19, i32* %20, i32* %21, i32 %22, i32* %23, i32** %16)
  store i32 %24, i32* %17, align 4
  %25 = load i32, i32* %17, align 4
  %26 = call i64 @FAILED(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %7
  %29 = load i32, i32* %17, align 4
  store i32 %29, i32* %8, align 4
  br label %46

30:                                               ; preds = %7
  %31 = load i32*, i32** %9, align 8
  %32 = load i32*, i32** %16, align 8
  %33 = load i32*, i32** %14, align 8
  %34 = call i32 @set_constructor_prop(i32* %31, i32* %32, i32* %33)
  store i32 %34, i32* %17, align 4
  %35 = load i32, i32* %17, align 4
  %36 = call i64 @FAILED(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %30
  %39 = load i32*, i32** %16, align 8
  %40 = call i32 @jsdisp_release(i32* %39)
  %41 = load i32, i32* %17, align 4
  store i32 %41, i32* %8, align 4
  br label %46

42:                                               ; preds = %30
  %43 = load i32*, i32** %16, align 8
  %44 = load i32**, i32*** %15, align 8
  store i32* %43, i32** %44, align 8
  %45 = load i32, i32* @S_OK, align 4
  store i32 %45, i32* %8, align 4
  br label %46

46:                                               ; preds = %42, %38, %28
  %47 = load i32, i32* %8, align 4
  ret i32 %47
}

declare dso_local i32 @create_builtin_function(i32*, i32, i32*, i32*, i32, i32*, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @set_constructor_prop(i32*, i32*, i32*) #1

declare dso_local i32 @jsdisp_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
